--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -83,17 +83,14 @@
 
       if (!loaded && curState >= 3 && ( localStorage.getItem("access_token") === "undefined" || localStorage.getItem("access_token") === null
                                       || parseInt(localStorage.getItem("curTime")) + parseInt(localStorage.getItem("expiresIn")) < Math.floor(Date.now()/1000) ) ) { // Access_token doesn't exist, or is expired, yet curState is one that requires an access_token. Reset the whole app.
-       console.log("hi");
         localStorage.setItem("access_token",null);
         setCurState(0);
-                setLoaded(true);
-
+        setLoaded(true);
         //window.location.reload();
       } else if (!loaded && curState >= 3) { // They opened the page with access token still valid but curstate above 3. Reset it to 3 so we can reget the music (future development might be to store tracksPool in local storage?)
-               console.log("hsdfi");
-
-        setLoaded(true);
+        console.log("hizsdf");
         setCurState(3);
+        setLoaded(true);
         //window.location.reload();
       }
       
