--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -56,6 +56,7 @@
 
     useEffect(() => {
       // Update local storage whenever curState changes
+      console.log("updated curstat hie");
       localStorage.setItem('curState', curState.toString());
       if (curState > 0 && !loaded) { //If this is our first loading of the page and we are past curState 0, then make sure it scrolls to the right place
         postIntroRef.current.scrollIntoView({ behavior: 'smooth', block: 'start' });
@@ -90,7 +91,7 @@
       } else if (!loaded && curState >= 3) { // They opened the page with access token still valid but curstate above 3. Reset it to 3 so we can reget the music (future development might be to store tracksPool in local storage?)
         console.log("hizsdf");
         setCurState(3);
-        setLoaded(true);
+        //setLoaded(true);
         //window.location.reload();
       }
       
