--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -127,8 +127,8 @@
         <Reactintro />
         <div id="postIntro" ref={postIntroRef}>
           <h1 id="welcome">Welcome to FaceMusic</h1>
-          { curState == 0 && <Reactstep1 curState={curState} setCurState={setCurState} /> }
-          { curState >= 3 && <Reactstep2 curState={curState} setCurState={setCurState} /> }
+          { (loaded && curState == 0) && <Reactstep1 curState={curState} setCurState={setCurState} /> }
+          { (loaded && curState >= 3) && <Reactstep2 curState={curState} setCurState={setCurState} /> }
         </div>
       </div>
     );
