Made with ♡ in hanover nh

--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -129,6 +129,14 @@
           <h1 id="welcome">Welcome to FaceMusic</h1>
           { (loaded && curState == 0) && <Reactstep1 curState={curState} setCurState={setCurState} /> }
           { (loaded && curState >= 3) && <Reactstep2 curState={curState} setCurState={setCurState} /> }
+         <hr />
+          <p>Made with ♡ in Hanover, NH</p> 
+          <p>
+           <b><a href="https://github.com/realjunderwood/realjunderwood.github.io/blob/main/facemusic/README.md" target="_BLANK">How it works</a></b>
+                      </p>
+<p>
+            <b><a href="https://github.com/realjunderwood/realjunderwood.github.io/tree/main/facemusic" target="_BLANK">Source code</a></b>
+</p>
         </div>
       </div>
     );
