--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -131,7 +131,7 @@
           { (loaded && curState >= 3) && <Reactstep2 curState={curState} setCurState={setCurState} /> }
          <div id="footer">
           <hr />
-          <p><b>Made with ♡ in Hanover, NH<b></p> 
+          <p><b>Made with ♡ in Hanover, NH</b></p> 
           <p><small>
            <a href="https://github.com/realjunderwood/realjunderwood.github.io/blob/main/facemusic/README.md" target="_BLANK">How it works</a> |   
             <a href="https://github.com/realjunderwood/realjunderwood.github.io/tree/main/facemusic" target="_BLANK">Source code</a></small>
