--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -6,6 +6,18 @@
     <title>FaceMusic</title>
     <link rel="stylesheet" href="react_main.css">
   </head>
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7FJJHQC5M4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7FJJHQC5M4');
+</script>
+
+  
   <body>
 
     <div id="root"></div>
