--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -15,6 +15,15 @@ background-image: url("water.gif");
   }
 </style>
 </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FJJHQC5M4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7FJJHQC5M4');
+</script>
+  
 <body>
   <div id="mainContainer">
     <h5 style="margin:0"><i><a href="/">return to jamesunderwood.net</a></i></h5>
