--- a/notary.html
+++ b/notary.html
@@ -7,6 +7,14 @@
       }
     </style>
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FJJHQC5M4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7FJJHQC5M4');
+</script>
 <body>
   <div id="container">
 <h2>Ohio notary law is really cool. I put together this flowchart depicting the disciplinary process for an Ohio notary public accused of notarial misconduct. It is based on <a href="https://codes.ohio.gov/ohio-administrative-code/rule-111:6-1-07">Ohio Admin. Code § 111:6-1-07</a>.</h2>
