--- a/index.html
+++ b/index.html
@@ -214,7 +214,13 @@ display: flex;
 <p>I love a good email. You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
   
 <hr>
+	  <h2>Things you should read</h2>
+		  <ul>
+			  <li><a href="https://urbigenous.net/library/">Urbigenous Library</a></li>
+		  </ul>
+	  <hr>
 	  <h2>Follow me elsewhere</h2>
+	  
 	  <ul>
 				<li><a href="https://github.com/realjunderwood">GitHub</a></li>
 		  		<li><a href="https://github.com/junderw00d">GitHub (old account)</a></li>
