--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ display: flex;
 	  <div id="headerr">
 		  <div class="headerr-item" id="headerr-item1">
 <h1 id="hpageWelcome">Welcome! :]</h1>
-    <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. Some of my interests include AI alignment, effective altruism, cognitive science, human-centered design, public affairs, law, linguistics, and journalism.</h2>
+    <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. This is my personal website.</h2>
 		  </div>
 		  <div class="headerr-item" id="headerr-item2">
 			  <figure>
@@ -144,7 +144,7 @@ display: flex;
   </div>
 	  
 	  <hr>
-    <h2>Recent work</h2>
+    <h2>Recent</h2>
 	<ul>
 		<li><a href="/cgolpython">Conway's Game of Life in Python</a>
 		<span class="smoldate">Oct. 2023</span>
@@ -191,8 +191,8 @@ display: flex;
 
 
 	  <h2>Guestbook</h2>
-	  				<button onclick="window.open('/guestbookpost.html','name','width=610,height=250,resizable=0')">leave a message</button>       
-<!-- <div style="position:relative;top:-150px;background:rgb(118,118,118)">
+	  <p>Leave a message below</p>
+	  				<button onclick="window.open('/guestbookpost.html','name','width=610,height=250,resizable=0')">leave a message</button>       <!-- <div style="position:relative;top:-150px;background:rgb(118,118,118)">
 <div style="height: 350px;width:600px;overflow: hidden;clip-path: inset(45% 0px 0px 0 round 0px);">			
 <iframe scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:100%;" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
