--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ display: flex;
 	  <h2>Cool things</h2>
 		  <ul>
 			  <li><a href="https://urbigenous.net/library/">Urbigenous Library</a></li>
-			<!--  <li><a href="https://www.neelnanda.io/mechanistic-interpretability/getting-started"></a></li> -->
+			<li><a href="https://www.neelnanda.io/mechanistic-interpretability/getting-started"></a></li>
 		  </ul>
 	  <hr> -->
 	  <h2>Follow me elsewhere</h2>
