--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ display: flex;
   </div>
 	  
 	  <hr>
-    <h2>Recent</h2>
+    <h2>recent</h2>
 	<ul>
 		<li><a href="/cgolpython">Conway's Game of Life in Python</a>
 		<span class="smoldate">Oct. 2023</span>
@@ -190,7 +190,7 @@ display: flex;
 <hr>
 
 
-	  <h2>Guestbook</h2>
+	  <h2>guestbook</h2>
 	  <p>Leave a message below</p>
 	  				<button onclick="window.open('/guestbookpost.html','name','width=610,height=250,resizable=0')">leave a message</button>       <!-- <div style="position:relative;top:-150px;background:rgb(118,118,118)">
 <div style="height: 350px;width:600px;overflow: hidden;clip-path: inset(45% 0px 0px 0 round 0px);">			
@@ -210,7 +210,7 @@ display: flex;
 
 
 	  <hr>
-  <h2>Email me <span id="emailmea">something to read</span></h2>
+  <h2>email me <span id="emailmea">something to read</span></h2>
 <p>I love a good email. You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
   
 <hr>
@@ -221,7 +221,7 @@ display: flex;
 			<li><a href="https://www.neelnanda.io/mechanistic-interpretability/getting-started"></a></li>
 		  </ul>
 	  <hr> -->
-	  <h2>Follow me elsewhere</h2>
+	  <h2>find me elsewhere</h2>
 	  
 	  <ul>
 				<li><a href="https://github.com/realjunderwood">GitHub</a></li>
@@ -242,7 +242,7 @@ display: flex;
 
 <hr>
   <div id="cursivefooter">
-	  <h2>Imprint</h2>
+	  <h2>imprint</h2>
 	  <div id="imprintcontent">
 		  <div>
 						<pre style="font-size:4.25px;display:inline-block;color:black;font-weight:1000">
@@ -286,7 +286,7 @@ I8,      ,8'
 
 
 
-emailmearray = ["a love letter", "a Pinterest board", "a witticism", "an emoticon", "a pun", "a stirring speech", "a riddle", "an infographic", "a personal question", "a video game you like", "a call to action", "misinformation", "lofi beats to relax/study to", "a white paper", "Fluxus music", "a scavenger hunt", "a wry tweet", "a crossword", "a spurious correlation", "your theory of everything", "a factsheet", "art", "a map", "feedback", "an apology", "an anecdote", "something to laugh at", "a sick typeface", "your <i>raison d'être</i>", "a painting", "a press inquiry", "spam", "coupons", "advice", "a comic", "something to read", "a survey", "a thought experiment", "a job offer", "a catchy tune", "sheet music", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a well-written court opinion", "a tasty recipe", "a Wikipedia article", "a theorem", "a math problem", "your manifesto", "your screenplay", "small talk", "a surprising etymology", "good news", "bad news", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take", "a podcast rec", "a zine", "a picture of the sunset", "a creative analogy", "a factoid", "the name of your favorite major metropolitan area", "a travelogue", "a short story", "your website"]
+emailmearray = ["a love letter", "a Pinterest board", "a witticism", "an emoticon", "a pun", "a stirring speech", "a riddle", "an infographic", "a personal question", "a video game you like", "a call to action", "misinformation", "lofi beats to relax/study to", "a white paper", "Fluxus music", "a scavenger hunt", "a wry tweet", "a crossword", "a spurious correlation", "your theory of everything", "a factsheet", "art", "a map", "feedback", "an apology", "an anecdote", "something to laugh at", "a sick typeface", "your <i>raison d'être</i>", "a painting", "a press inquiry", "spam", "coupons", "advice", "a comic", "something to read", "a survey", "a thought experiment", "a job offer", "a catchy tune", "sheet music", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a well-written court opinion", "a tasty recipe", "a Wikipedia article", "a theorem", "a math problem", "your manifesto", "your screenplay", "small talk", "a surprising etymology", "good news", "bad news", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take", "a podcast rec", "a zine", "a picture of the sunset", "a creative analogy", "a factoid", "a travelogue", "a short story", "your website"]
 shuffleArray(emailmearray);
   
 cureindex = 0;
