--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ font-family:"Georgia";
 </style>
 </head>
 <body>
-<h3>Hi, I'm James.</h3>
-<h4>I'm a sophomore at Dartmouth College studying Electrical & Computer Engineering and Dartmouth College.</h4>
+<h3>Hi :)</h3>
+<h4>I'm a sophomore at Dartmouth College studying Electrical & Computer Engineering and Dartmouth College. This is my personal website.</h4>
 </body>
 </html>
