--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ font-family:"Georgia";
 </style>
 </head>
 <body>
-<h3>Hi :)</h3>
-<h4>I'm a sophomore at Dartmouth College studying Electrical & Computer Engineering and Dartmouth College. This is my personal website.</h4>
+  <small style="text-align:center">"preceded by its quotation yields falsehood" preceded by its quotation yields falsehood.</small>
+  
+<!-- <h4>I'm a sophomore at Dartmouth College studying Electrical & Computer Engineering at Dartmouth College. This is my personal website.</h4> -->
 </body>
 </html>
