--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 body {
 margin-left:10%;
 margin-right:10%;
+  margin-top:5%;
 font-family:"Georgia";
 }
 </style>
 </head>
 <body>
-  <small style="text-align:center">"preceded by its quotation yields falsehood" preceded by its quotation yields falsehood.</small>
+  <small>"preceded by its quotation yields falsehood" preceded by its quotation yields falsehood.</small>
   
 <!-- <h4>I'm a sophomore at Dartmouth College studying Electrical & Computer Engineering at Dartmouth College. This is my personal website.</h4> -->
 </body>
