--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ font-family:"Georgia";
 </style>
 </head>
 <body>
-  <small>"preceded by its quotation yields falsehood" preceded by its quotation yields falsehood.</small>
+  <small>&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
   
 <!-- <h4>I'm a sophomore at Dartmouth College studying Electrical & Computer Engineering at Dartmouth College. This is my personal website.</h4> -->
 </body>
