--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@ font-family:"Georgia";
 </head>
 <body>
   <small>&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
+  <div>
+    <img src="eyeball.png">
+  </div>
   </body>
 </html>
