--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@ margin-right:10%;
   margin-top:5%;
 font-family:"Georgia";
 }
+  div {
+    display: inline-block;
+    vertical-align:top;
+  }
 </style>
 </head>
 <body>
+<div>
   <small>&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
-  <div>
+  </div>
+    <div>
     <img src="eyeball.png">
   </div>
   </body>
