--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ font-family:"Georgia";
   <small>&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
   </div>
     <div>
-    <img src="eyeball.png">
+    <img src="eyeball.png" width="400px">
   </div>
   </body>
 </html>
