--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 body {
-margin-left:10%;
-margin-right:10%;
+margin-left:20%;
+margin-right:20%;
   margin-top:5%;
 font-family:"Georgia";
 }
@@ -16,7 +16,7 @@ font-family:"Georgia";
 </head>
 <body>
 <div>
-  <small>&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
+  <small style="margin-top:5%">&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
   </div>
     <div>
     <img src="eyeball.png" width="200px">
