--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 body {
-margin-left:20%;
-margin-right:20%;
+margin-left:14%;
+margin-right:14%;
   margin-top:5%;
 font-family:"Georgia";
 }
@@ -16,10 +16,10 @@ font-family:"Georgia";
 </head>
 <body>
 <div>
-  <small style="margin-top:5%">&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
+  <small>&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
   </div>
     <div>
-    <img src="eyeball.png" width="200px">
+    <img src="eyeball.png" width="150px">
   </div>
   </body>
 </html>
