--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ font-family:"Georgia";
     display: inline-block;
     vertical-align:top;
   }
+  img {
+width:150px;
+    margin-top:-50px;
+  }
 </style>
 </head>
 <body>
@@ -19,7 +23,7 @@ font-family:"Georgia";
   <small>&ldquo;preceded by its quotation yields falsehood&rdquo; preceded by its quotation yields falsehood.</small>
   </div>
     <div>
-    <img src="eyeball.png" width="150px">
+    <img src="eyeball.png">
   </div>
   </body>
 </html>
