--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ margin-left:14%;
 margin-right:14%;
   margin-top:5%;
 font-family:"Georgia";
+  text-align:right;
 }
   div {
     display: inline-block;
