--- a/yost/index.html.html
+++ b/yost/index.html.html
@@ -9,6 +9,8 @@ body {
 pre, code{
       white-space: pre-wrap;
   text-overflow: wrap !important;
+  background:#e8e8e8;
+  margin-left:25px;
 }
 
 </style>
