--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ display: flex;
 
 	  <hr>  -->
   <h2>email me <span id="emailmea">something to read</span></h2>
-<p>I love a good email. You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
+<p>Get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
   
 <hr>
 	  <!--
