--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ display: flex;
 	  <h2>find me elsewhere</h2>
 	  
 	  <ul>
+		  <li><a href="https://jamesunderwood.substack.com">Substack</a><span> <small>content coming soon</small></span>
 				<li><a href="https://github.com/realjunderwood">GitHub</a></li>
 		  		<li><a href="https://github.com/junderw00d">GitHub (old account)</a></li>
 
