--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@ display: flex;
 	  <hr>
     <h2>recent</h2>
 	<ul>
+				<li>Spatiotemporal analysis of Apis mellifera foraging in a Brassica juncea field using bioacoustics
+		<span class="smoldate">forthcoming talk at Entomological Society of America eastern branch meeting</span></li>
+
+				<li><a href="/plotter">Pen plotter</a>
+		<span class="smoldate">Summer 2024</span></li>
+
 		<li><a href="/cgolpython">Conway's Game of Life in Python</a>
 		<span class="smoldate">Oct. 2023</span>
 		</li>
