--- a/plotter/index.html
+++ b/plotter/index.html
@@ -76,10 +76,11 @@
 
     <div class="slideshow">
       <div>
-        <video controls autoplay muted loop>
-          <source src="media/mov.mov" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
+
+        <video controls="controls" autoplay muted loop name="video">
+  <source src="/plotter/media/mov.mov">
+</video>
+
       </div>
 
       <div><img src="media/image1.jpeg" alt="Image 1" /></div>
