--- a/plotter/index.html
+++ b/plotter/index.html
@@ -72,13 +72,14 @@
         is given as such:
       </p>
       <img src="media/corexy.svg" alt="CoreXY" />
+      <img src="media/image5.png" />
     </div>
 
     <div class="slideshow">
       <div>
 
         <video controls="controls" autoplay muted loop name="video">
-  <source src="/plotter/media/mov.mov">
+  <source src="/plotter/media/mov.MOV">
 </video>
 
       </div>
@@ -86,7 +87,6 @@
       <div><img src="media/image1.jpeg" alt="Image 1" /></div>
       <div><img src="media/image2.png" alt="Image 2" /></div>
       <div><img src="media/image3.png" alt="Image 3" /></div>
-      <!-- Add more images or videos as needed -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
