--- a/plotter/index.html
+++ b/plotter/index.html
@@ -72,7 +72,7 @@
         is given as such:
       </p>
       <img src="media/corexy.svg" alt="CoreXY" />
-      <img src="media/image5.png" />
+      <img src="media/image5.png" style="width:200px" />
     </div>
 
     <div class="slideshow">
