--- a/index.html
+++ b/index.html
@@ -232,16 +232,16 @@ display: flex;
 	  <h2>find me elsewhere</h2>
 	  
 	  <ul>
-		  <li><a href="https://jamesunderwood.substack.com">Substack</a><span> <small>content coming soon</small></span>
+		  <li><a href="https://jamesunderwood.substack.com">Substack</a><span> <small>coming soon</small></span>
 				<li><a href="https://github.com/realjunderwood">GitHub</a></li>
 		  		<li><a href="https://github.com/junderw00d">GitHub (old account)</a></li>
 
-		  		<li><a href="https://www.goodreads.com/user/show/153388050-j-u">Goodreads</a></li>
+		  		<!-- <li><a href="https://www.goodreads.com/user/show/153388050-j-u">Goodreads</a></li>
 
 				<li><a href="https://instagram.com/junderwooood">Instagram</a></li>
-				<li><a href="https://letterboxd.com/jayunder/">Letterboxd</a></li>
+				<li><a href="https://letterboxd.com/jayunder/">Letterboxd</a></li> -->
 		  		<li><a href="https://www.linkedin.com/in/jamescunderwood/">LinkedIn</a></li>
-		  		<li><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=b3a0f79c828946b5">Spotify</a></li>
+		  		<!-- <li><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=b3a0f79c828946b5">Spotify</a></li> -->
 
 
 		  
