--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ display: flex;
 	  <h2>imprint</h2>
 	  <div id="imprintcontent">
 		  <div>
+			  <!--
 						<pre style="font-size:4.25px;display:inline-block;color:black;font-weight:1000">
   
        gg                                                        ,ggg,         gg                                                                                                      
@@ -273,7 +274,7 @@ I8,      ,8'
 `Y8,___,d8'                                                                                                                                                                          
   "Y888P"                                                                                                                                                                            
 
-</pre>
+</pre>-->
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
