--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@ display: flex;
 	  <hr>
     <h2>recent</h2>
 	<ul>
+		<li>building a search engine in c <span class="smoldate">Feb. 2025 • write-up coming soon</span></li>
 				<li>Spatiotemporal analysis of Apis mellifera foraging in a Brassica juncea field using bioacoustics
-		<span class="smoldate">forthcoming talk at Entomological Society of America eastern branch meeting</span></li>
+		<span class="smoldate">forthcoming talk at ESA Harrisburg</span></li>
 
 				<li><a href="/plotter">Pen plotter</a>
 		<span class="smoldate">Summer 2024</span></li>
@@ -155,26 +156,14 @@ display: flex;
 		<li><a href="/cgolpython">Conway's Game of Life in Python</a>
 		<span class="smoldate">Oct. 2023</span>
 		</li>
-		<li><a href="https://github.com/OSU-Bee-Lab/BuzzDetect">BuzzDetect (OSU Bee Lab)</a>
+		<li><a href="https://github.com/OSU-Bee-Lab/BuzzDetect">BuzzDetect (Johnson Bee Lab @ OSU)</a>
 		<span class="smoldate">Summer 2023</span>
-		</li>
-<li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a>
-			<span class="smoldate">2/10/2023</span>
-
-<ul>
-<li><a href="https://www.arlingtonian.com/archives/author/jamesu">All student journalism</a></li>
-</ul>
-
-</li>
+		
 		<li><a href="/codenames.html">Finding Codenames Clues using NLP</a></li>
 
 
 
 
-<li>
-						<a href="notary.html">Ohio notary public disciplinary process infographic</a>
-						<span class="smoldate">August 2022</span>
-					</li>
 
 		
 		<li><a href="/autoannouncer">AutoAnnouncer</a>
@@ -184,15 +173,40 @@ display: flex;
 
 
 		
-<li>
-						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
-						<span class="smoldate">3/13/2022</span>
-					</li>
+
 		
 		<li><a href="https://devpost.com/software/shoulders-of-giants">Shoulders of Giants (Uncommon Hacks 2021 best hardware hack)</a></li>
 								<span class="smoldate">4/4/2021</span>
 
 	</ul>
+
+	  <hr>
+
+	  <h2>Misc / nontechnical</h2>
+	  <ul>
+
+
+		  
+<li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a>
+			<span class="smoldate">2/10/2023</span>
+
+<ul>
+<li><a href="https://www.arlingtonian.com/archives/author/jamesu">All student journalism</a></li>
+</ul>
+
+</li>
+
+<li>
+						<a href="notary.html">Ohio notary public disciplinary process infographic</a>
+						<span class="smoldate">August 2022</span>
+					</li>
+<li>
+						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
+						<span class="smoldate">3/13/2022</span>
+					</li>
+
+		  
+	  </ul>
 <hr>
 
 <!--
