--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ display: flex;
 		<li><a href="https://github.com/OSU-Bee-Lab/BuzzDetect">BuzzDetect (Johnson Bee Lab @ OSU)</a>
 		<span class="smoldate">Summer 2023</span>
 		
-		<li><a href="/codenames.html">Finding Codenames Clues using NLP</a></li>
+		<!-- <li><a href="/codenames.html">Finding Codenames Clues using NLP</a></li> -->
 
 
 
