--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -20,7 +20,7 @@ max-width:60%;
   <div id="maindiv">
   <a href="/">< return to jamesunderwood.net</a>
 <h1>Conway's Game of Life in Python</h1>
-<h2>This is an implementation of Conway's Game of Life that I created for my CS1 class.</h2>
+<h2>This is an implementation of Conway's Game of Life.</h2>
 <pre>This is a Python implementation of Conway's Game of Life (CGOL). CGOL
 consists of a grid of cells that are either "alive" or "dead." In each
 iteration of the game, called a generation, specific rules govern
@@ -60,11 +60,11 @@ Conway's_Game_of_Life
     <strong><a href="https://github.com/realjunderwood/cgolpython">Browse the source code</a></strong>
   </div>
     <div id="videodiv">
-
+<!--
    <video width="320" autoplay loop>
   <source src="Demo1.mov" type="video/mp4">
 Your browser does not support the video tag.
-</video> 
+</video> -->
       <br>
 <video width="320" autoplay loop>
   <source src="Demo2.mov" type="video/mp4">
