--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ display: flex;
 
 	  <hr>
 
-	  <h2>Misc / nontechnical</h2>
+	  <h2>misc / nontechnical</h2>
 	  <ul>
 
 
@@ -267,8 +267,9 @@ display: flex;
   <div id="cursivefooter">
 	  <h2>imprint</h2>
 	  <div id="imprintcontent">
+					  <!--
+
 		  <div>
-			  <!--
 						<pre style="font-size:4.25px;display:inline-block;color:black;font-weight:1000">
   
        gg                                                        ,ggg,         gg                                                                                                      
@@ -288,9 +289,10 @@ I8,      ,8'
 `Y8,___,d8'                                                                                                                                                                          
   "Y888P"                                                                                                                                                                            
 
-</pre>-->
+</pre>
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
 	  </div>
+		  -->
 		  <img src="/assets/8831/jund8831.png">
 		 <!-- <p class="smallp"><small><a href="/indexold.html">view old site</a></small></p>-->
 		  <p class="smallp"><small>Made with ♡ in Franklin County, Ohio, USA</small></p>
