--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ display: flex;
 
 	  <div id="headerr">
 		  <div class="headerr-item" id="headerr-item1">
-<h1 id="hpageWelcome">Welcome! :]</h1>
-    <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. This is my personal website.</h2>
+<h1 id="hpageWelcome">Hey!</h1>
+    <h2 id="intrograph" style="font-weight:300">I'm a sophomore at Dartmouth College studying computer science. This is my personal website.</h2>
 		  </div>
 		  <div class="headerr-item" id="headerr-item2">
 			  <figure>
