Simplify GitHub link by removing styles
Removed inline styles from GitHub link in index.html.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           }
           if (githubEl) {
             if (project.github) {
-              githubEl.innerHTML = `<a href="${project.github}" target="_blank" style="color: #0066cc; text-decoration: none;">View Project →</a>`;
+              githubEl.innerHTML = `<a href="${project.github}" target="_blank">View Project →</a>`;
               githubEl.hidden = false;
             } else {
               githubEl.hidden = true;
