--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
       <ul>
         <li>
           Hearon, L., Johnson, L., <strong>Underwood, J.</strong>, et al.
-          <a href="https://www.biorxiv.org/content/10.1101/2025.06.13.659554v1"
+          <a href="https://academic.oup.com/jinsectscience/article/25/6/ieaf104/8376356" target="_BLANK"
             >Buzzdetect: an open-source deep learning tool for automated
             bioacoustic pollinator monitoring.</a
           >
-          bioRxiv preprint. doi.org:10.1101/2025.06.13.659554
+          Journal of Insect Science. 2025;25(6):ieaf104.
         </li>
         <li>
           <strong>James Underwood</strong>, et al.
-          <a href="/newassets/ESA talk.pdf"
+          <a href="/newassets/ESA talk.pdf" target="_BLANK"
             >Spatiotemporal analysis of <i>Apis mellifera</i> foraging in a
             <i>Brassica juncea</i> field using bioacoustics.</a
           >
@@ -149,8 +149,8 @@
           {
             title:
               "buzzdetect: an open-source deep learning tool for automated bioacoustic pollinator monitoring",
-            url: "https://www.biorxiv.org/content/10.1101/2025.06.13.659554v1",
-            venue: "bioRxiv preprint, 2025",
+            url: "https://academic.oup.com/jinsectscience/article/25/6/ieaf104/8376356",
+            venue: "Journal of Insect Science, 2025",
           },
           {
             title:
