--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
       <ul>
         <li>
           Hearon, L., Johnson, L., <strong>Underwood, J.</strong>, et al.
-          <a href="https://academic.oup.com/jinsectscience/article/25/6/ieaf104/8376356" target="_BLANK"
+          <a
+            href="https://academic.oup.com/jinsectscience/article/25/6/ieaf104/8376356"
+            target="_BLANK"
             >Buzzdetect: an open-source deep learning tool for automated
             bioacoustic pollinator monitoring.</a
           >
@@ -102,7 +104,7 @@
           {
             id: "shelfquest",
             title: "ShelfQuest",
-            body: "Software to allow libraries to map their collections for patron wayfinding",
+            body: "Software to allow libraries to map their collections for patron wayfinding; currently in use at a mid-sized New England public library.",
             tech: "Stack: MERN hosted on a DigitalOcean Droplet",
             image: "/newassets/sq.png",
             github: "https://shelfquest.app",
@@ -125,7 +127,7 @@
           {
             id: "webdcr",
             title: "WebDCR website",
-            body: "Building a website for Dartmouth College Radio (WebDCR) with a focus on fast, accessible publication workflows.",
+            body: "Built a new website for Dartmouth College Radio (WebDCR) from the ground up. Launching Jan 16, 2026.",
             tech: "Stack: Jekyll, Alpine.JS",
             image: "/newassets/webdcr.png",
           },
