--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           {
             id: "webdcr",
             title: "WebDCR website",
-            body: "Built a new website for Dartmouth College Radio (WebDCR) from the ground up. Launching Jan 16, 2026.",
+            body: "Built a new website for Dartmouth College Radio from the ground up. Launching Jan 16, 2026.",
             tech: "Jekyll, Alpine.JS",
             image: "newassets/webdcr.png",
             github: "https://webdcr.github.io",
@@ -117,7 +117,7 @@
           {
             id: "penplotter",
             title: "PenPlotter",
-            body: "Built a pen plotter using 3D printed parts with bespoke control software and hardware integration.",
+            body: "Designed 3D printed parts and wrote control software to build a penplotter.",
             tech: "C++, Arduino",
             image: "newassets/plotter.png",
           },
