--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           {
             id: "webdcr",
             title: "WebDCR website",
-            body: "Built a new website for Dartmouth College Radio from the ground up. Launching Jan 16, 2026.",
+            body: "Built a new website for Dartmouth College Radio from the ground up.",
             tech: "Jekyll, Alpine.JS",
             image: "newassets/webdcr.png",
             github: "https://webdcr.github.io",
