--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           {
             id: "tiny-search",
             title: "Tiny Search Engine",
-            body: "Built a simple search engine in C, including indexer and crawler components for introductory information retrieval research.",
+            body: "Built a simple search engine in C, including indexer and crawler components.",
             tech: "C",
             image: "newassets/tse.png",
           },
